<resources>
    <string name="app_name">Android2Lesson1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android2 Lesson1</string>
    <string name="nav_header_subtitle">DM Software LLC, 2019</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="size_plus">Size + </string>
    <string name="size_minus">Size - </string>

    <string name="act_1">MainActivity</string>
    <string name="act_2">Activity2</string>
    <string name="act_3">Activity3</string>
    <string name="act_4">Activity4</string>
    <string name="menu_about">About</string>
    <string name="menu_feedback">Feedback</string>
    <string name="feedback_hint">Enter your feedback here</string>
    <string name="feedback_ask">Please, write your feedback</string>
    <string name="txt_about">Dmitry Malov\nDM Software LLC, 2019</string>
    <string name="feedback_sent">Feedback sent</string>

 </resources>
